- Fix some JS component loader shutdown leaks. - Ensure that we use JSPRINCIPALS_DROP() where needed to avoid leaking principals. - Clear newborn roots when we've finished with a JSContext, so we don't keep objects from being gc'd if there are no other references.

Part of bug 198655.  Thanks to dbaron for much of the component loader patch.  r=shaver, sr=brendan.